summative.moria.Moria.scala.error
Compilation error:
Moria:26: error: not found: value isNotFacingWall
  while (isNotFacingWall()) {
         ^